# ai-toolkit

./: .gitignore  .mise.toml  CLAUDE.md  README.md  dgx_instructions.md  justfile  pyproject.toml  run_mac.zsh
deploy/: README.md  aitoolkit.service
docker/: Dockerfile  start.sh
extensions_built_in/diffusion_models/krea2/: krea2.py
ui/: README.md  package.json
